Version 0.4.6

  User-visible changes:
   * Adapt to cclive 0.5.6 changes
     # --regexp
       * Update the label
       * Update editbox tooltip
       * Remove "find all" checkbox
     # --substitute
       * Add label + editbox


Version 0.4.5
(November 21, 2009)

  User-visible changes:
   * Confirm exit if c/clive is still active
   * c/clive autodetect, verify buttons (preferences)
   * Autodetect c/clive from the path (if empty path)
   * Feed manager:
     # Allow use of feed names instead of links
     # Use checkboxes for selection instead
     # Fix defunct "clear list" button
     # Remove "paste link" button
   * Fix segfault when verifying path with non-c/clive commands

  Developer-visible changes:
   * Move cclive detection logic to src/util.(cpp|h) file
   * Add NEWS file


Version 0.4.4
(October 5, 2009)

  User-visible changes:
   * New icons:
     # File / Quit
     # Help / About 
   * Fix: rss/scan: unicode chars should now display OK


Version 0.4.3
(August 29, 2009)

  User-visible changes:
   * Add: --regexp, --find-all support
     # New in cclive 0.5.0
   * Add: --filename-format support
   * Remove: --title support
     # No longer supported by cclive as of 0.5.0
   * Start DL if new link is added after hitting "start dl" on empty list
   * Show LANG locale setting in about dialog
   * Fix: filename not shown when download starts
   * Fix: typo in statustip "scan for video links"
   * Fix: filename parsing when it contains whitespace
   * Fix: switching c/clive executables without restarting

  Developer-visible changes:
   * Rewrite QProcess output parsing
     # Fixes "filename parsing when it contains whitespace"
     # Process exit code instead of parsing output
   * Add INSTALL file
   * Append --print-fname to clive options
     # Fixes "filename not shown when download starts"
     # Bumps clive prerequisite to 2.2.5


Version 0.4.2
(August 1, 2009)

  User-visible changes:
   * Change: